Closed
Bug 188967
Opened 23 years ago
Closed 23 years ago
trunk topcrash [@ nsEventStateManager::GetNextTabbableContent]
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jcarpenter0524, Assigned: aaronlev)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
2.34 KB,
patch
|
saari
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
This stack signature is a topcrasher for trunk
Crash data range: 2003-01-08 to 2003-01-12
Build ID range: 2003010708 to 2003011204
STACK TRACE:
nsEventStateManager::GetNextTabbableContent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 3571]
nsEventStateManager::ShiftFocusInternal
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 3103]
nsEventStateManager::ShiftFocus
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 2999]
nsEventStateManager::PostHandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 1991]
PresShell::HandleEventInternal
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6196]
PresShell::HandleEvent
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6082]
nsViewManager::HandleEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2162]
nsView::HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 304]
nsViewManager::DispatchEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 1948]
HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 83]
nsWindow::DispatchEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1119]
nsWindow::DispatchWindowEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1136]
nsWindow::DispatchKeyEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 3017]
nsWindow::OnChar [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp
line 3211]
nsWindow::ProcessMessage
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 3920]
nsWindow::WindowProc
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1403]
KERNEL32.DLL + 0x363b (0xbff7363b)
KERNEL32.DLL + 0x24407 (0xbff94407)
0x00648b62
Source File :
c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line : 3571
URLs\COMMENTS:
(16092522) Comments: - Typed heisede - Pressed Enter - Aborted loading
with the escape key - Inserted "." in heisede so it became heise.de - Pressed
Enter - Crash
(16077690) URL: http://www.modarchive.com
Updated•23 years ago
|
Severity: normal → critical
Comment 1•23 years ago
|
||
aaronl, could this be related to your changes?
Assignee | ||
Comment 2•23 years ago
|
||
Looks like it, but I can't see a problem with the code at line 3571.
Assignee | ||
Comment 4•23 years ago
|
||
I can't get the talkback server to work and I'm leaving for a trip tomorrow.
This is my best guess.
Assignee | ||
Updated•23 years ago
|
Attachment #111576 -
Flags: superreview?(bryner)
Attachment #111576 -
Flags: review?(saari)
Comment 5•23 years ago
|
||
Comment on attachment 111576 [details] [diff] [review]
Adds null check for subDoc. Patch is large only because the indent changes.
r=saari
Attachment #111576 -
Flags: review?(saari) → review+
Assignee | ||
Comment 6•23 years ago
|
||
Comment on attachment 111576 [details] [diff] [review]
Adds null check for subDoc. Patch is large only because the indent changes.
Hoping to get an sr= on this so I can check it in tonight.
Attachment #111576 -
Flags: superreview?(bryner) → superreview?(bzbarsky)
![]() |
||
Updated•23 years ago
|
Attachment #111576 -
Flags: superreview?(bzbarsky) → superreview+
Assignee | ||
Comment 7•23 years ago
|
||
checked in fix
reopen if there's still a problem.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsEventStateManager::GetNextTabbableContent]
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•