Bug 188967. Possible fix for talkback crash. r=saari, sr=bz